--- a/public/css/woocommerce_refund_and_exchange_lite-public.css
+++ b/public/css/woocommerce_refund_and_exchange_lite-public.css
@@ -7,7 +7,7 @@
   display:none;
   color: #ffffff;
 }
-.ced_rnx_return_column img, .ced_rnx_return_note img, .ced_rnx_exchange_column img, .ced_rnx_exchange_note img{ 
+.ced_rnx_return_column img, .ced_rnx_return_note img, .ced_rnx_exchange_column img, .ced_rnx_exchange_note img{
   width:75px !important;
   height:75px !important;
 }
@@ -60,7 +60,7 @@
   width: 25px !important;
 }
 
-///
+//
 
 
 @CHARSET "UTF-8";
@@ -72,7 +72,7 @@
   display:none;
   color: #ffffff;
 }
-.ced_rnx_return_column img, .ced_rnx_return_note img, .ced_rnx_exchange_column img, .ced_rnx_exchange_note img{ 
+.ced_rnx_return_column img, .ced_rnx_return_note img, .ced_rnx_exchange_column img, .ced_rnx_exchange_note img{
   width:75px !important;
   height:75px !important;
 }
@@ -124,13 +124,10 @@
   height: 25px !important;
   width: 25px !important;
 }
-/*.ced_rnx_product_table .ced_rnx_return_product {
-display: block !important;
-}*/
 .ced_rnx_exchange_notification_choose_product{
   display: none;
 }
-#ced_rnx_variation_list a 
+#ced_rnx_variation_list a
 {
   margin-left: 1%;
 }
@@ -151,13 +148,13 @@ display: block !important;
   .shop_table.order_details.ced_rnx_product_table td,
   .ced_rnx_exchanged_products.ced_rnx_product_table th,
   .ced_rnx_exchanged_products.ced_rnx_product_table td{
-    padding: 4px;
+	padding: 4px;
   }
   #ced_rnx_exchange_request_subject + .select2.select2-container{
-    width: 100%!important;
+	width: 100%!important;
   }
   .ced-rnx_customer_detail table th, .ced-rnx_customer_detail table td {
-    padding: 16px;
+	padding: 16px;
   }
 }
 .ced_rnx_product_table_wrapper {
@@ -205,7 +202,6 @@ display: block !important;
   letter-spacing: 1px;
 }
 .ced_rnx_product_title > p {
-  /*background-color: #D6D6D6;*/
   color:#000;
   font-weight: bold;
   margin-top: 10px;
@@ -259,7 +255,8 @@ display: block !important;
 }
 #ced_rnx_return_request_subject ~ .select2.select2-container,
 #ced_rnx_exchange_request_subject ~ .select2.select2-container,
-.ced_rnx_exchange_request_reason {
+.ced_rnx_exchange_request_reason ,
+#ced_rnx_return_request_subject{
   width: 100%!important;
 }
 #ced_rnx_return_request_form_wrapper label,
@@ -279,6 +276,317 @@ display: block !important;
 }
 @media screen and (max-width: 650px) {
   .ced_rnx_product_table thead th{
-    min-width: 160px;
+	min-width: 160px;
   }
+}
+
+/*View order messages css*/
+
+.mwb_order_messages {
+  margin-left: 30px;
+  background-color: white;
+}
+
+.mwb_order_msg_main_container {
+  margin-bottom: 30px;
+  border-color: #dddddd;
+  border-width: 1px;
+  border-style: solid;
+  padding-top: 27px;
+  padding-right: 27px;
+  padding-left: 0;
+  padding-bottom: 27px;
+  width: auto;
+  word-wrap: break-word;
+}
+
+.mwb_order_messages .mwb_order_msg_sender {
+  background-color: #374585;
+  color: white;
+  padding-right: 15px;
+  padding-left: 25px;
+  margin-left: -1px;
+}
+
+.mwb_order_msg_sender {
+  display: inline-block;
+  font-size: 12pt;
+  font-weight: 600;
+}
+
+.mwb_order_msg_date {
+  font-size: 8pt;
+  float: right;
+}
+.mwb_order_messages .mwb_order_msg_detail_container, .mwb_order_messages .mwb_order_msg_attach_container {
+  margin-left: 27px;
+}
+.mwb_order_msg_detail_container {
+  font-size: 10pt;
+  margin: 20px 0;
+}
+
+.mwb_order_msg_single_attachment {
+    display: inline-block;
+    width: 130px;
+    height: auto;
+    margin-right: 5px;
+    margin-top: 12px;
+    font-size: 9px;
+}
+
+.mwb_order_msg_main_container.mwb_order_messages hr {
+
+    width: 97%;
+    background-color: #ccc;
+    border: 0;
+    height: 1px;
+    margin: 15px auto;
+
+}
+
+div.mwb_order_msg_single_attachment a .mwb_order_msg_attachment_thumbnail {
+    border: 1px solid black;
+    border-radius: 3px;
+    max-width: 115px;
+    display: table;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5px;
+}
+
+.mwb_order_msg_sub_container {
+    padding: 15px;
+    border: solid #ccc 1px;
+    overflow-y: auto;
+    min-height: 200px;
+    max-height: 400px;
+}
+
+#mwb_order_new_msg {
+  width: 100%;
+}
+
+
+
+/*===============================
+=            New-CSS            =
+===============================*/
+.mwb_order_msg_title h4 {
+    font-size: 20px;
+    font-weight: 500 !important;
+}
+textarea#mwb_order_new_msg {
+    border: 1px solid #ccc;
+    box-shadow: none;
+    height: 150px;
+    background: #fff;
+}
+#mwb_order_new_msg_form label {
+    margin-top: 15px !important;
+    display: block;
+    color: #000;
+    margin-bottom: 7px;
+    font-size: 16px !important;
+    text-transform: capitalize;
+}
+.mwb_order_msg_notice_wrapper {
+    color: #fff;
+    padding: 15px;
+    border-radius: 5px;
+    background: #64CD83;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+}
+p.mwb_order_msg_sent_notice {
+    font-size: 16px !important;
+    margin-bottom: 0;
+}
+a.mwb_order_send_msg_dismiss {
+    color: #fff;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+#mwb_order_msg_submit {
+    background: #374585;
+    border: 1px solid #374585;
+    color: #fff;
+    text-decoration: none;
+    font-size: 16px;
+    margin: 0;
+    padding: 6px 30px;
+    cursor: pointer;
+    border-radius: 3px;
+}
+.mwb_order_msg_history_title h4 {
+    color: #000;
+    font-size: 18px;
+    font-weight: 400;
+}
+.mwb_order_messages .mwb_order_msg_sender {
+    padding: 8px 40px 8px 30px;
+    position: relative;
+}
+.mwb_order_msg_sender:before {
+    content: '';
+    position: absolute;
+    right: -10px;
+    top: 10px;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-top: 20px solid #ffffff;
+    clear: both;
+    transform: rotate(90deg);
+}
+
+
+.mwb_order_add_msg_form .mwb_order_msg_notice_wrapper{
+padding: 5px 15px;
+}
+.mwb_order_add_msg_form a.mwb_order_send_msg_dismiss{
+text-decoration: none;
+}
+.mwb_order_add_msg_form .mwb_order_msg_history_container {
+margin-top: 40px;
+}
+.mwb_order_messages .mwb_order_msg_sender{
+background-color: #4f62b9;
+}
+.mwb_order_messages .mwb_order_msg_date{
+font-size: 11pt;
+}
+.mwb_order_messages .mwb_order_msg_single_attachment {
+font-size: 12px;
+}
+div.mwb_order_msg_single_attachment a .mwb_order_msg_attachment_thumbnail{
+margin-left: 0 !important;
+margin-right: 0 !important;
+}
+.mwb_order_messages .mwb_order_msg_single_attachment{
+padding-left: 10px;
+}
+.mwb_order_messages .mwb_order_msg_attachment_file_name {
+	padding-top: 5px !important;
+    display: inline-block;
+    text-decoration: underline;
+    color: #6b6b6b;
+    font-size: 16px;
+}
+#mwb_order_msg_submit{
+background-color: #4f62b9;
+}
+.mwb_order_msg_history_title .reload{
+display: flex;
+flex-wrap: wrap;
+justify-content: space-between;
+margin-bottom: 6px !important;
+}
+.mwb_order_msg_history_container .mwb_reload_messages .reload-icon {
+    width: 30px; 
+}
+
+/*=====  End of New-CSS  ======*/
+
+.mwb_admin_order_msg_wrapper .mwb_order_msg_date{
+    font-size: 11pt;
+}
+.mwb_order_msg_single_attachment{
+    font-size: 13px;
+}
+.mwb_admin_order_msg_wrapper .mwb_order_msg_notice_wrapper{
+    color: #fff;
+    border-radius: 5px;
+    background: #64CD83;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 5px 15px;
+    font-weight: 600;
+    margin-top: 30px;
+}
+.mwb_admin_order_msg_wrapper .mwb_order_msg_notice_wrapper p{
+    margin: 0px;
+    font-size: 16px;
+}
+.mwb_admin_order_msg_wrapper .mwb_order_msg_notice_wrapper a{
+    color: #ffffff;
+    text-decoration: none;
+}
+.mwb_order_msg_attachment_file_name {
+    padding-top: 10px !important;
+    display: inline-block;
+    text-decoration: underline;
+}
+.mwb_order_msg_attach_container .mwb_order_msg_attachments_title{
+    padding-bottom: 10px;
+}
+.mwb_order_msg_attach_container .mwb_order_msg_attachments_title {
+    font-size: 20px;
+}
+.mwb_order_msg_attach_container .mwb_order_msg_single_attachment{
+    padding-left: 10px;
+    text-align: center;
+}
+/* 09-APR-2020 */
+
+.mwb-order-msg-attachment-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.mwb_order_add_msg_form .mwb-order-heading {
+    background-color: #dadada;
+    padding: 7px 15px;
+    font-weight: 600 !important;
+    color: #1f1f1f !important;
+}
+.mwb_order_msg_history_title .mwb-order-heading {
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+.mwb_order_msg_history_title .mwb-order-heading .mwb_reload_messages {
+    margin-left: 20px;
+    width: 18px;
+    margin-top: 3px;
+}
+@keyframes spin {
+	0% {
+		transform: rotateZ(0);
+	}
+	100% {
+		transform: rotateZ(360deg);
+	}
+}
+.mwb-loader-icon {
+    animation: spin 1s infinite linear;
+    transition: all .3s;
+    transition-timing-function: ease-in;
+}
+.mwb-order-msg-btn {
+    margin-top: 15px;
+    text-align: right;
+    width: 100%;
+}
+#mwb_order_msg_attachment {
+    width: 50%;
+}
+.mwb_notice_main_container {
+    margin-bottom: 15px;
+}
+.mwb_order_msg_reload_notice_wrapper{
+	display: none;
+}
+.mwb_order_msg_reload_notice_wrapper {
+    color: #fff;
+    padding: 5px 15px;
+    border-radius: 5px;
+    background: #64CD83;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
 }
