--- a/public/css/woocommerce_refund_and_exchange_lite-public.css
+++ b/public/css/woocommerce_refund_and_exchange_lite-public.css
@@ -258,6 +258,7 @@
 .ced_rnx_exchange_request_reason ,
 #ced_rnx_return_request_subject{
   width: 100%!important;
+  margin:auto;
 }
 #ced_rnx_return_request_form_wrapper label,
 .ced_rnx_note_tag_wrapper p label{
