--- a/admin/css/mwb-order-edit-page.css
+++ b/admin/css/mwb-order-edit-page.css
@@ -25,7 +25,7 @@
 	width: 100%;
 }
 .mwb_rma_refund_pd-top{
-	padding-top: 10px;
+	padding-top: 10px;: 
 }
 
 
@@ -94,6 +94,10 @@ span.mwb_order_msg_date {
 .mwb_order_msg_attachments_title{
     padding-bottom: 8px;
 }
+.mwb_rma_admin_order_msg_wrapper textarea{
+    width: 100%;
+    min-height: 230px;
+}
 
 /*media-query*/
 @media only screen and (max-width: 480px){
@@ -129,4 +133,19 @@ span.mwb_order_msg_date {
     .woocommerce-feature-enabled-activity-panels #woocommerce-order-downloads .buttons .select2-container{
        width: 100% !important; 
     }
+}
+
+div.mwb_order_msg_single_attachment a .mwb_order_msg_attachment_thumbnail {
+    border: 1px solid black;
+    border-radius: 3px;
+    max-width: 115px;
+    display: table;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5px;
+}
+
+div.mwb_order_msg_single_attachment a .mwb_order_msg_attachment_thumbnail{
+    margin-left: 0 !important;
+    margin-right: 0 !important;
 }
