--- a/admin/css/mwb-order-edit-page.css
+++ b/admin/css/mwb-order-edit-page.css
@@ -98,6 +98,26 @@ span.mwb_order_msg_date {
     width: 100%;
     min-height: 230px;
 }
+.mwb_order_msg_notice_wrapper{
+    color: #fff;
+    border-radius: 5px;
+    display: none;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 5px 15px;
+    font-weight: 600;
+    margin-top: 30px;
+    background: #64CD83;
+}
+.mwb_order_msg_notice_wrapper p{
+    margin: 0px;
+    font-size: 16px;
+}
+.mwb_order_msg_notice_wrapper a{
+    color: #ffffff;
+    text-decoration: none;
+}
 
 /*media-query*/
 @media only screen and (max-width: 480px){
